[gd_scene load_steps=13 format=2]

[ext_resource path="res://Heist-Meisters-Assets/GFX/Interface/PNG/glassPanel.png" type="Texture" id=1]
[ext_resource path="res://Heist-Meisters-Assets/GFX/Interface/PNG/metalPanel.png" type="Texture" id=2]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Heist-Meisters-Assets/GFX/Interface/PNG/dotWhite.png" type="Texture" id=5]
[ext_resource path="res://Heist-Meisters-Assets/GFX/Interface/PNG/metalPanel_yellowCorner.png" type="Texture" id=8]
[ext_resource path="res://Heist-Meisters-Assets/GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=9]
[ext_resource path="res://Heist-Meisters-Assets/GFX/Interface/PNG/metalPanel_redCorner.png" type="Texture" id=11]
[ext_resource path="res://Interface/NumberPad.gd" type="Script" id=12]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="Animation" id=9]
resource_name = "Correct"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ButtonContainer/GridContainer/StatusLight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.486275, 0.00784314, 1 ), Color( 0.0823529, 0.113725, 0.00784314, 1 ), Color( 0.0705882, 0.980392, 0.0196078, 1 ) ]
}

[node name="NumberPad" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 400 )
rect_clip_content = true
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_left = 15.0
margin_right = 265.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
rect_clip_content = true
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_left = 100.0
margin_top = 36.0
margin_right = 180.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 280.0
margin_bottom = 344.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 72.0
margin_right = 208.0
margin_bottom = 184.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3

[node name="Button1" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_right = 136.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_top = 48.0
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 96.0
margin_right = 40.0
margin_bottom = 136.0
rect_min_size = Vector2( 40, 40 )
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_top = 96.0
margin_right = 88.0
margin_bottom = 136.0
rect_min_size = Vector2( 40, 40 )
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_top = 96.0
margin_right = 136.0
margin_bottom = 136.0
rect_min_size = Vector2( 40, 40 )
text = "9"

[node name="StatusLight" type="TextureRect" parent="VBoxContainer/ButtonContainer/GridContainer"]
modulate = Color( 0.984314, 0.486275, 0.00784314, 1 )
margin_top = 144.0
margin_right = 40.0
margin_bottom = 184.0
texture = ExtResource( 5 )
expand = true

[node name="Button10" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_top = 144.0
margin_right = 88.0
margin_bottom = 184.0
rect_min_size = Vector2( 40, 40 )
text = "0"

[node name="ButtonOK" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_top = 144.0
margin_right = 136.0
margin_bottom = 184.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "OK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Correct = SubResource( 9 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
